<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.droid.atl.farmyantra.login"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_sublayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/holo_blue_dark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/holo_blue_dark" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccent"
                android:text="@string/btn_login"
                android:textColor="@android:color/black"
                android:translationZ="15dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone"

            />

        <LinearLayout
            android:id="@+id/welcome_sublayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome_text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/return_to_products"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_products"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
